Fixed bug where the wrong treeview would expand.

--- a/demo/components/sidebar.html
+++ b/demo/components/sidebar.html
@@ -23,7 +23,7 @@
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('dashboard')">
             <a href="#" lte-treeview-toggle>
                 <i class="fa fa-dashboard"></i>
-                <span>Dashboard ¤¤{{$ctrl.$state.includes('dashboard')}}¤¤</span>
+                <span>Dashboard</span>
                 <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
                 </span>
@@ -90,7 +90,7 @@
         </li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('forms')">
             <a href="#" lte-treeview-toggle>
-                <i class="fa fa-edit"></i> <span>Forms ¤¤{{$ctrl.$state.includes('forms')}}¤¤</span>
+                <i class="fa fa-edit"></i> <span>Forms</span>
                 <span class="pull-right-container">
                     <i class="fa fa-angle-left pull-right"></i>
                 </span>
