Added active indication to sidebar.

--- a/demo/components/sidebar.html
+++ b/demo/components/sidebar.html
@@ -96,9 +96,9 @@
                 </span>
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a ui-sref="forms.general-elements"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                <li><a href="../forms/advanced.html"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                <li><a href="../forms/editors.html"><i class="fa fa-circle-o"></i> Editors</a></li>
+                <li ui-sref-active="active"><a ui-sref="forms.general-elements"><i class="fa fa-circle-o"></i> General Elements</a></li>
+                <li ui-sref-active="active"><a ui-sref="forms.advanced"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
+                <li ui-sref-active="active"><a ui-sref="forms.editors"><i class="fa fa-circle-o"></i> Editors</a></li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
