--- a/demo/components/sidebar.html
+++ b/demo/components/sidebar.html
@@ -21,12 +21,7 @@
     <ul class="sidebar-menu" lte-treeview>
         <li class="header">MAIN NAVIGATION</li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('dashboard')">
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-dashboard"></i>
-                <span>Dashboard</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-dashboard" header="Dashboard">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li><a ui-sref="dashboard.v1"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
@@ -34,12 +29,8 @@
             </ul>
         </li>
         <li class="treeview" lte-treeview>
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-files-o"></i>
-                <span>Layout Options</span>
-                <span class="pull-right-container">
-                    <span class="label label-primary pull-right">4</span>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-files-o" header="Layout Options">
+                <span class="label label-primary pull-right">4</span>
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
@@ -48,21 +39,13 @@
                 <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
             </ul>
         </li>
-        <li>
-            <a href="../widgets.html">
-                <i class="fa fa-th"></i> <span>Widgets</span>
-                <span class="pull-right-container">
-                    <small class="label pull-right bg-green">new</small>
-                </span>
+        <li class="treeview" lte-treeview>
+            <a href="../widgets.html" lte-treeview-toggle icon="fa fa-th" header="Widgets">
+                <small class="label pull-right bg-green">new</small>
             </a>
         </li>
         <li class="treeview" lte-treeview>
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-pie-chart"></i>
-                <span>Charts</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-pie-chart" header="Charts">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
@@ -72,12 +55,7 @@
             </ul>
         </li>
         <li class="treeview" lte-treeview>
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-laptop"></i>
-                <span>UI Elements</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-laptop" header="UI Elements">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li><a href="general.html"><i class="fa fa-circle-o"></i> General</a></li>
@@ -89,11 +67,7 @@
             </ul>
         </li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('forms')">
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-edit"></i> <span>Forms</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-edit" header="Forms">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li ui-sref-active="active"><a ui-sref="forms.general-elements"><i class="fa fa-circle-o"></i> General Elements</a></li>
@@ -102,42 +76,28 @@
             </ul>
         </li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('tables')">
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-table"></i> <span>Tables</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-table" header="Tables">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li ui-sref-active="active"><a ui-sref="tables.simple-tables"><i class="fa fa-circle-o"></i> Simple tables</a></li>
                 <li ui-sref-active="active"><a ui-sref="tables.data-tables"><i class="fa fa-circle-o"></i> Data tables</a></li>
             </ul>
         </li>
-        <li>
-            <a href="../calendar.html">
-                <i class="fa fa-calendar"></i> <span>Calendar</span>
-                <span class="pull-right-container">
-                    <small class="label pull-right bg-red">3</small>
-                    <small class="label pull-right bg-blue">17</small>
-                </span>
-            </a>
-        </li>
-        <li>
-            <a href="../mailbox/mailbox.html">
-                <i class="fa fa-envelope"></i> <span>Mailbox</span>
-                <span class="pull-right-container">
-                    <small class="label pull-right bg-yellow">12</small>
-                    <small class="label pull-right bg-green">16</small>
-                    <small class="label pull-right bg-red">5</small>
-                </span>
+        <li class="treeview" lte-treeview>
+            <a href="../calendar.html" lte-treeview-toggle icon="fa fa-calendar" header="Calendar">
+                <small class="label pull-right bg-red">3</small>
+                <small class="label pull-right bg-blue">17</small>
             </a>
         </li>
         <li class="treeview" lte-treeview>
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-folder"></i> <span>Examples</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="../mailbox/mailbox.html" lte-treeview-toggle icon="fa fa-envelope" header="Mailbox">
+                <small class="label pull-right bg-yellow">12</small>
+                <small class="label pull-right bg-green">16</small>
+                <small class="label pull-right bg-red">5</small>
+            </a>
+        </li>
+        <li class="treeview" lte-treeview>
+            <a href="#" lte-treeview-toggle icon="fa fa-folder" header="Examples">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li><a href="../examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
@@ -152,28 +112,17 @@
             </ul>
         </li>
         <li class="treeview" lte-treeview>
-            <a href="#" lte-treeview-toggle>
-                <i class="fa fa-share"></i>
-                <span>Multilevel</span>
-                <span class="pull-right-container">
-                    <i class="fa fa-angle-left pull-right"></i>
-                </span>
+            <a href="#" lte-treeview-toggle icon="fa fa-share" header="Multilevel">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
                 <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
                 <li lte-treeview>
-                    <a href="#" lte-treeview-toggle><i class="fa fa-circle-o"></i> Level One
-                        <span class="pull-right-container">
-                            <i class="fa fa-angle-left pull-right"></i>
-                        </span>
+                    <a href="#" lte-treeview-toggle icon="fa fa-circle-o" header="Level One">
                     </a>
                     <ul class="treeview-menu" lte-treeview-menu>
                         <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
                         <li lte-treeview>
-                            <a href="#" lte-treeview-toggle><i class="fa fa-circle-o"></i> Level Two
-                                <span class="pull-right-container">
-                                    <i class="fa fa-angle-left pull-right"></i>
-                                </span>
+                            <a href="#" lte-treeview-toggle icon="fa fa-circle-o" header="Level Two">
                             </a>
                             <ul class="treeview-menu" lte-treeview-menu>
                                 <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
@@ -185,10 +134,18 @@
                 <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
             </ul>
         </li>
-        <li><a href="../../documentation/index.html"><i class="fa fa-book"></i> <span>Documentation</span></a></li>
+        <li class="treeview" lte-treeview>
+            <a href="../../documentation/index.html" lte-treeview-toggle icon="fa fa-book" header="Documentation">&shy;</a>
+        </li>
         <li class="header">LABELS</li>
-        <li><a href="#"><i class="fa fa-circle-o text-red"></i> <span>Important</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-yellow"></i> <span>Warning</span></a></li>
-        <li><a href="#"><i class="fa fa-circle-o text-aqua"></i> <span>Information</span></a></li>
+        <li class="treeview">
+            <a href="#" lte-treeview-toggle icon="fa fa-circle-o text-red" header="Important">&shy;</a>
+        </li>
+        <li class="treeview">
+            <a href="#" lte-treeview-toggle icon="fa fa-circle-o text-yellow" header="Warning">&shy;</a>
+        </li>
+        <li class="treeview">
+            <a href="#" lte-treeview-toggle icon="fa fa-circle-o text-aqua" header="Information">&shy;</a>
+        </li>
     </ul>
 </section>
