--- a/demo/components/sidebar.html
+++ b/demo/components/sidebar.html
@@ -24,8 +24,8 @@
             <a href="#" lte-treeview-toggle icon="fa fa-dashboard" header="Dashboard">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a ui-sref="dashboard.v1"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                <li><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                <li ui-sref-active="active"><a ui-sref="dashboard.v1"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
+                <li ui-sref-active="active"><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
