Formatted most of the code using prettier.

--- a/src/components/SmallBoxComponent.html
+++ b/src/components/SmallBoxComponent.html
@@ -7,6 +7,7 @@
         <i class="fa" ng-class="'fa-' + $ctrl.icon"></i>
     </div>
     <a href="#" class="small-box-footer" ng-click="$ctrl.lteClick();">
-        {{$ctrl.linkText}} <i class="fa fa-arrow-circle-right"></i>
+        {{$ctrl.linkText}}
+        <i class="fa fa-arrow-circle-right"></i>
     </a>
 </div>
