--- a/demo/components/sidebar.html
+++ b/demo/components/sidebar.html
@@ -5,7 +5,8 @@
         </div>
         <div class="pull-left info">
             <p>Alexander Pierce</p>
-            <a href="#"><i class="fa fa-circle text-success"></i> Online</a>
+            <a href="#">
+                <i class="fa fa-circle text-success"></i> Online</a>
         </div>
     </div>
     <form action="#" method="get" class="sidebar-form">
@@ -24,8 +25,14 @@
             <a lte-treeview-title icon="fa fa-dashboard" header="Dashboard">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li ui-sref-active="active"><a ui-sref="dashboard.v1"><i class="fa fa-circle-o"></i> Dashboard v1</a></li>
-                <li ui-sref-active="active"><a href="../../index2.html"><i class="fa fa-circle-o"></i> Dashboard v2</a></li>
+                <li ui-sref-active="active">
+                    <a ui-sref="dashboard.v1">
+                        <i class="fa fa-circle-o"></i> Dashboard v1</a>
+                </li>
+                <li ui-sref-active="active">
+                    <a href="../../index2.html">
+                        <i class="fa fa-circle-o"></i> Dashboard v2</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
@@ -33,10 +40,22 @@
                 <span class="label label-primary pull-right">4</span>
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a href="../layout/top-nav.html"><i class="fa fa-circle-o"></i> Top Navigation</a></li>
-                <li><a href="../layout/boxed.html"><i class="fa fa-circle-o"></i> Boxed</a></li>
-                <li><a href="../layout/fixed.html"><i class="fa fa-circle-o"></i> Fixed</a></li>
-                <li><a href="../layout/collapsed-sidebar.html"><i class="fa fa-circle-o"></i> Collapsed Sidebar</a></li>
+                <li>
+                    <a href="../layout/top-nav.html">
+                        <i class="fa fa-circle-o"></i> Top Navigation</a>
+                </li>
+                <li>
+                    <a href="../layout/boxed.html">
+                        <i class="fa fa-circle-o"></i> Boxed</a>
+                </li>
+                <li>
+                    <a href="../layout/fixed.html">
+                        <i class="fa fa-circle-o"></i> Fixed</a>
+                </li>
+                <li>
+                    <a href="../layout/collapsed-sidebar.html">
+                        <i class="fa fa-circle-o"></i> Collapsed Sidebar</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('widgets')">
@@ -48,39 +67,84 @@
             <a lte-treeview-title icon="fa fa-pie-chart" header="Charts">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a href="../charts/chartjs.html"><i class="fa fa-circle-o"></i> ChartJS</a></li>
-                <li><a href="../charts/morris.html"><i class="fa fa-circle-o"></i> Morris</a></li>
-                <li><a href="../charts/flot.html"><i class="fa fa-circle-o"></i> Flot</a></li>
-                <li><a href="../charts/inline.html"><i class="fa fa-circle-o"></i> Inline charts</a></li>
+                <li>
+                    <a href="../charts/chartjs.html">
+                        <i class="fa fa-circle-o"></i> ChartJS</a>
+                </li>
+                <li>
+                    <a href="../charts/morris.html">
+                        <i class="fa fa-circle-o"></i> Morris</a>
+                </li>
+                <li>
+                    <a href="../charts/flot.html">
+                        <i class="fa fa-circle-o"></i> Flot</a>
+                </li>
+                <li>
+                    <a href="../charts/inline.html">
+                        <i class="fa fa-circle-o"></i> Inline charts</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
             <a lte-treeview-title icon="fa fa-laptop" header="UI Elements">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a href="general.html"><i class="fa fa-circle-o"></i> General</a></li>
-                <li><a href="icons.html"><i class="fa fa-circle-o"></i> Icons</a></li>
-                <li><a href="buttons.html"><i class="fa fa-circle-o"></i> Buttons</a></li>
-                <li><a href="sliders.html"><i class="fa fa-circle-o"></i> Sliders</a></li>
-                <li><a href="timeline.html"><i class="fa fa-circle-o"></i> Timeline</a></li>
-                <li><a href="modals.html"><i class="fa fa-circle-o"></i> Modals</a></li>
+                <li>
+                    <a href="general.html">
+                        <i class="fa fa-circle-o"></i> General</a>
+                </li>
+                <li>
+                    <a href="icons.html">
+                        <i class="fa fa-circle-o"></i> Icons</a>
+                </li>
+                <li>
+                    <a href="buttons.html">
+                        <i class="fa fa-circle-o"></i> Buttons</a>
+                </li>
+                <li>
+                    <a href="sliders.html">
+                        <i class="fa fa-circle-o"></i> Sliders</a>
+                </li>
+                <li>
+                    <a href="timeline.html">
+                        <i class="fa fa-circle-o"></i> Timeline</a>
+                </li>
+                <li>
+                    <a href="modals.html">
+                        <i class="fa fa-circle-o"></i> Modals</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('forms')">
             <a lte-treeview-title icon="fa fa-edit" header="Forms">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li ui-sref-active="active"><a ui-sref="forms.general-elements"><i class="fa fa-circle-o"></i> General Elements</a></li>
-                <li ui-sref-active="active"><a ui-sref="forms.advanced"><i class="fa fa-circle-o"></i> Advanced Elements</a></li>
-                <li ui-sref-active="active"><a ui-sref="forms.editors"><i class="fa fa-circle-o"></i> Editors</a></li>
+                <li ui-sref-active="active">
+                    <a ui-sref="forms.general-elements">
+                        <i class="fa fa-circle-o"></i> General Elements</a>
+                </li>
+                <li ui-sref-active="active">
+                    <a ui-sref="forms.advanced">
+                        <i class="fa fa-circle-o"></i> Advanced Elements</a>
+                </li>
+                <li ui-sref-active="active">
+                    <a ui-sref="forms.editors">
+                        <i class="fa fa-circle-o"></i> Editors</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview active="$ctrl.$state.includes('tables')">
             <a lte-treeview-title icon="fa fa-table" header="Tables">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li ui-sref-active="active"><a ui-sref="tables.simple-tables"><i class="fa fa-circle-o"></i> Simple tables</a></li>
-                <li ui-sref-active="active"><a ui-sref="tables.data-tables"><i class="fa fa-circle-o"></i> Data tables</a></li>
+                <li ui-sref-active="active">
+                    <a ui-sref="tables.simple-tables">
+                        <i class="fa fa-circle-o"></i> Simple tables</a>
+                </li>
+                <li ui-sref-active="active">
+                    <a ui-sref="tables.data-tables">
+                        <i class="fa fa-circle-o"></i> Data tables</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
@@ -100,38 +164,80 @@
             <a lte-treeview-title icon="fa fa-folder" header="Examples">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a href="../examples/invoice.html"><i class="fa fa-circle-o"></i> Invoice</a></li>
-                <li><a href="../examples/profile.html"><i class="fa fa-circle-o"></i> Profile</a></li>
-                <li><a href="../examples/login.html"><i class="fa fa-circle-o"></i> Login</a></li>
-                <li><a href="../examples/register.html"><i class="fa fa-circle-o"></i> Register</a></li>
-                <li><a href="../examples/lockscreen.html"><i class="fa fa-circle-o"></i> Lockscreen</a></li>
-                <li><a href="../examples/404.html"><i class="fa fa-circle-o"></i> 404 Error</a></li>
-                <li><a href="../examples/500.html"><i class="fa fa-circle-o"></i> 500 Error</a></li>
-                <li><a href="../examples/blank.html"><i class="fa fa-circle-o"></i> Blank Page</a></li>
-                <li><a href="../examples/pace.html"><i class="fa fa-circle-o"></i> Pace Page</a></li>
+                <li>
+                    <a href="../examples/invoice.html">
+                        <i class="fa fa-circle-o"></i> Invoice</a>
+                </li>
+                <li>
+                    <a href="../examples/profile.html">
+                        <i class="fa fa-circle-o"></i> Profile</a>
+                </li>
+                <li>
+                    <a href="../examples/login.html">
+                        <i class="fa fa-circle-o"></i> Login</a>
+                </li>
+                <li>
+                    <a href="../examples/register.html">
+                        <i class="fa fa-circle-o"></i> Register</a>
+                </li>
+                <li>
+                    <a href="../examples/lockscreen.html">
+                        <i class="fa fa-circle-o"></i> Lockscreen</a>
+                </li>
+                <li>
+                    <a href="../examples/404.html">
+                        <i class="fa fa-circle-o"></i> 404 Error</a>
+                </li>
+                <li>
+                    <a href="../examples/500.html">
+                        <i class="fa fa-circle-o"></i> 500 Error</a>
+                </li>
+                <li>
+                    <a href="../examples/blank.html">
+                        <i class="fa fa-circle-o"></i> Blank Page</a>
+                </li>
+                <li>
+                    <a href="../examples/pace.html">
+                        <i class="fa fa-circle-o"></i> Pace Page</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
             <a lte-treeview-title icon="fa fa-share" header="Multilevel">
             </a>
             <ul class="treeview-menu" lte-treeview-menu>
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-circle-o"></i> Level One</a>
+                </li>
                 <li lte-treeview>
                     <a lte-treeview-title icon="fa fa-circle-o" header="Level One">
                     </a>
                     <ul class="treeview-menu" lte-treeview-menu>
-                        <li><a href="#"><i class="fa fa-circle-o"></i> Level Two</a></li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-circle-o"></i> Level Two</a>
+                        </li>
                         <li lte-treeview>
                             <a lte-treeview-title icon="fa fa-circle-o" header="Level Two">
                             </a>
                             <ul class="treeview-menu" lte-treeview-menu>
-                                <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
-                                <li><a href="#"><i class="fa fa-circle-o"></i> Level Three</a></li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-circle-o"></i> Level Three</a>
+                                </li>
+                                <li>
+                                    <a href="#">
+                                        <i class="fa fa-circle-o"></i> Level Three</a>
+                                </li>
                             </ul>
                         </li>
                     </ul>
                 </li>
-                <li><a href="#"><i class="fa fa-circle-o"></i> Level One</a></li>
+                <li>
+                    <a href="#">
+                        <i class="fa fa-circle-o"></i> Level One</a>
+                </li>
             </ul>
         </li>
         <li class="treeview" lte-treeview>
